# backend/src/feature-modules/auth/dto/auth.dto.ts
@@ -14,4 +14,12 @@ export class SingupAuthDto extends AuthDto {
   @IsNotEmpty()
   @IsString()
   username: string;
+
+  @IsNotEmpty()
+  @IsString()
+  firstName: string;
+
+  @IsNotEmpty()
+  @IsString()
+  lastName: string;
 }
